[package]
name = "rumba-controller"
version = "0.1.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
edition = "2018"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
# The `leonardo-panic` example shows a more elaborate version.
panic-halt = "0.2.0"
arduino-uno = { git="https://github.com/Rahix/avr-hal", rev="a202778" }
embedded-hal = "0.2"
nb = "0.1"
bitbang-hal = { git="https://github.com/Javier-varez/bitbang-hal.git", rev="12bf17f" }
void = { version = "1", default-features = false }
ufmt = "0.1.0"
rumba = { git="https://github.com/Javier-varez/Rumba.git", branch="main" }

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
